# limerick-benchmark

./: .gitignore  AGENTS.md  README.md  models.yaml  prefetch.py  pyproject.toml
.github/workflows/: ci.yml
benchmark/: __main__.py  agent.py  evaluator.py  metrics.py  ollama_utils.py  process_utils.py  report.py  runner.py
reports/: analysis_20260419.084250.md  results_20260417.134803.md  results_20260417.145044.md  results_20260417.155108.md  results_20260417.165047.md  results_20260417.172042.md  results_20260417.173614.md  results_20260419.084250.md
tasks/: limerick.md  wordpress.md
tests/: test_agent.py  test_evaluator.py  test_main.py  test_prefetch.py  test_process_utils.py  test_report.py  test_runner.py
